2005-06-02  Stipe Tolj  <stolj@wapme.de>
    * gwlib/http.c: some code styling within handle_transaction. No logic change.

2005-05-28  Alexander Malysh <amalysh at kannel.org>
    * gw/bb_store.c: fixed bug tthat caused bearerbox to consume 100% cpu time.
      Hopefully fixed #230 (see Mantis).

2005-05-10  Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_ois.c, gwlib/gwmem-check.c, test/test_regex.c: fixed coompiler
      warnings.
    * gwlib/conn.c: fixed typo '___inline' that cause build to fail.

2005-05-09  Alexander Malysh <amalysh at kannel.org>
    * gwlib/conn.c, gwlib/dbpool.c, gwlib/gw-prioqueue.c, gwlib/gwmem-check.c,
      gwlib/http.c, wap/wtls_pdu.h: changes that to make ISO strict compilers
      happy. Mostly: 'inline' -> '__inline'.

2005-05-09  Alexander Malysh <amalysh at kannel.org>
    * test/test_ppg.c: killled wait variable and use wait_seconds instead.

2005-05-09  Alexander Malysh <amalysh at kannel.org>
    * test/test_hmac.c: fixed build error when no openssl available.

2005-05-06  Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: build fixes for strict compillers.

2005-05-06  Alexander Malysh <amalysh at kannel.org>
    *  gwlib/octstr.h: fixed compiler warnings for strict compilers (e.g. HP-UX).

2005-05-05  Alexander Malysh <amalysh at kannel.org>
    * gwlib/gwlib.c: fixed segfault while shutdown when memcheck used.

2005-05-05  Alexander Malysh <amalysh at kannel.org>
    * gwlib/dbpool.c: drop 'inline' from function declaration. They can't
      inlined anyway but produce errors with strict ansi compilers.

2005-05-05  Alexander Malysh <amalysh at kannel.org>
    * configure.in, configure: fixed openssl detection for Mac OS X.

2005-04-22  Stipe Tolj  <stolj@wapme.de>
    * test/test_hmac.c: fixed compiler error of the automatic compilation test, 
      due to usage of HMAC_CTX_cleanup, whereas geodude still runs an openssl 
      version with the deprecated "old" HMAC_cleanup.
      